# crypto-signal-bot

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config_futures.local.yaml.example  config_futures.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: SYSTEM_SPEC.md  index.md
docs/analysis/: SCANNER.md  SWING_STRATEGY.md
docs/api/: core.md  scanner.md  strategies.md  trading.md
docs/development/: ARCHITECTURE.md
docs/operations/: COMMANDS.md
docs/telegram/: TELEGRAM_BOT_GUIDE.md
nginx/: README.md  nginx.conf
scripts/: close_orphan_position.py  export_clean.sh  gen_docs_graph.sh  get_telegram_group_id.py  init.sql  serve_docs.sh
scripts/backtest/: realistic_engine.py
scripts/database/: mysql_backup.sh
scripts/monitoring/: check_realtime_stats.py
scripts/telegram/: generate_hd_wallet.py  init_payment_addresses.py
scripts/testing/: test_channel_invite.py
src/analysis/: __init__.py  indicators.py  orderbook_analyzer.py
src/core/: __init__.py  bootstrap.py  cache.py  cache_warmup.py  config.py  container.py  database.py  distributed_lock.py  events.py  idempotency.py  logger.py  message_bus.py  metrics.py  protocols.py  repository.py  retry.py  saga.py  structured_logger.py  tracing.py
src/data/: __init__.py  deribit_client.py  exchange_client.py  orderbook_client.py
src/i18n/: __init__.py  en_US.yaml  zh_CN.yaml
src/notifications/: __init__.py  email_sender.py  formatter.py  handlers.py  notifier.py  telegram_app.py  telegram_broadcaster.py  telegram_sender.py  wechat_sender.py
src/sagas/: __init__.py  payment_saga.py  trading_saga.py
src/scanner/: __init__.py  ai_client.py  alert_detector.py  cooldown_manager.py  formatter.py  orderbook_detector.py  scheduler.py  sector_aggregator.py  sector_updater.py  (+2 more)
tests/: test_security_modules.py
(+157 files in other folders)
